--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ ul{
 a{
     text-decoration: none;
 }
+label,input{
+    display:none;
+}
 nav{
     padding:20px 100px;
     border-bottom: 1px solid #ccc;
@@ -120,4 +123,51 @@ figcaption{
 .saidapaul{
     margin: 30px 0px;
     width:400px;
+}
+@media screen and (max-width:900px) {
+    nav{
+        padding:20px 50px; 
+    }
+    nav ul{
+        position: absolute;
+        background-color: #fff;
+        top:128px;
+        right:5px;
+        border:1px solid rgb(141, 141, 141);
+        display:none;
+        flex-direction: column;
+        width:80%;
+    }
+    li a{
+        width:100%;
+        position: relative;
+        right:5px;
+    }
+    nav li a{
+        font-size:1.5em;
+    }
+    label{
+        display:block;
+    }
+    label section{
+        width:50px;
+        height: 10px;
+        background-color:black;
+        margin-bottom:5px;
+    }
+    input[type=checkbox]:checked ~ ul{
+        display: flex;
+        animation: right 0.8s;
+
+    }
+    @keyframes right {
+        from{
+            top:110px;
+        }
+        to{
+            top:128px;
+        }
+        
+    }
+    
 }
